--- a/app/views/league.view.html
+++ b/app/views/league.view.html
@@ -1,65 +1,43 @@
 <div class = "container-fluid">
-  <p ng-if = "league==null">Loading...</p>
-  <div ng-if = "league != null">
-    <p ng-if = "user==league.creator"> League: {{league.name}} </br> </p>
-
+  <!-- sidebar -->
+  <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
+    <ul class="nav">
+      <li>
+        <a class="list-group-item" ui-sref = "league({id:league_id})">
+          League: {{league.name}}
+        </a>
+      </li>
+      <li>
+        <a ng-if = "league.state != 'DURATION'" ui-sref = "draft({id:league_id})" class="list-group-item">
+          <i class="fa fa-comment-o"></i> 
+          Draft
+        </a>
+      </li>
+      <li>
+        <a ui-sref-active="active" ui-sref = ".matches" class="list-group-item">
+          <i class="fa fa-comment-o"></i> 
+          Matches
+        </a>
+      </li>
+      <li>
+        <a ui-sref-active="active" ui-sref = ".players" class="list-group-item">
+          <i class="fa fa-comment-o"></i> 
+          Players
+        </a>
+      </li> 
+      <li>
+        <a ui-sref-active="active" ui-sref = ".team" class="list-group-item">
+          <i class="fa fa-comment-o"></i> 
+          Team
+        </a>
+      </li>               
+    </ul>
+  </div>
     <!-- Testing
     <p>code: {{league_id}}</p>
   <pre>{{league}}</pre>
     -->
-    
-  <ul>
-      <li>
-        <p ng-if = "league.state != 'DURATION'"><a ui-sref = "draft({id:league_id})">Draft</a></p>
-    </li>
-      <li>
-        <p><a ui-sref = "team_management">My Team</a></p>
-      </li>
-      <li>
-        <p><a ui-sref = "players">League Players</a></p>
-      </li>
-      </br>
-      <li>
-        <p><a ng-click = "delete()">Delete League</a></p>
-      </li>
-  </ul>
-    
-    <!--MATCHDAY TABLE-->
-    <div class="col-lg-4">
-      <table class="table table-bordered table-striped">
 
-  Matches:
-  <ul>
-    <li ng-repeat="matchday in league.matches">
-      Matchday
-      <ul>
-        <li ng-repeat="match in matchday">
-          {{usernames[match.homePlayer]}} vs {{usernames[match.awayPlayer]}}
-        </li>
-      </ul>
-    </li>
-  </ul>
+  <div class="col-sm-9" ui-view></div>
 
-  <p ng-if="user==league.creator"><a ng-click="delete()">Delete</a></p>
-        <thead>
-          <tr><th colspan="2" > <center> Matchday X</th></tr>
-        </thead>
-
-        <tbody>
-          <tr ng-repeat="game in games" >
-              <td ng-if="game.winner == game.teamA" > <center><b>{{ game.teamA }}</td>
-              <td ng-if="game.winner == game.teamA" > <center>{{ game.teamB }}</td>
-              <td ng-if="game.winner == game.teamB" > <center>{{ game.teamA }}</td>
-              <td ng-if="game.winner == game.teamB" > <center><b>{{ game.teamB }}</td>
-              <td ng-if="game.winner == 'None'" > <center>{{ game.teamA }}</td>
-              <td ng-if="game.winner == 'None'" > <center>{{ game.teamB }}</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    
-
-    
-
-  </div>
 </div>
