added pick list at the top of the page

--- a/app/styles/navbar.scss
+++ b/app/styles/navbar.scss
@@ -7,6 +7,7 @@
   border-top: none;
   border-bottom: 3.5px solid $contrast;
   border-radius: 0;
+  margin-bottom: 0;
 
   .navbar-header {
     padding-left: 15px;
