added link to home in navbar logo

--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -16,7 +16,7 @@
         <ul class="nav navbar-nav">
         </ul>
 
-        <img src = "../../images/logo_navbar.png" alt = "" id="logo"/>
+        <a ui-sref="home"><img src = "../../images/logo_navbar.png" alt = "" id="logo"/></a>
 
         <div class="nav navbar-nav navbar-right">
           <div ng-if="!loggedIn()">
