--- a/app/views/team.view.html
+++ b/app/views/team.view.html
@@ -55,6 +55,15 @@
           </div>
         </div>
       </div>
+
+      <div class = "navbar-inner col-lg-5">
+        <h3>Other</h3>
+        <div class = "thumbnail" data-drop = "true" ng-model = 'other' data-jqyoui-options = "other" jqyoui-droppable = "{multiple:true}">
+          <div class = "caption">
+            <div class = "btn btn-info btn-draggable" ng-repeat = "item in other" ng-show = "item.title" data-drag = "{{item.drag}}" data-jqyoui-options = "{revert: 'invalid'}" ng-model = "other" jqyoui-draggable = "{index: {{$index}},animate:true}">{{item.title}}</div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
