--- a/app/views/userpage.view.html
+++ b/app/views/userpage.view.html
@@ -10,6 +10,7 @@
           <img src = "../images/liganos.jpg" class = "col-sm-7 no-padding" alt = "league logo"/>
           <div class = "league_info col-sm-5">
             <h3 class = "league_name">{{league.name}}</h3>
+            <a ng-click = "delete_league(league.id)">X</a>
             <p><span>Started: </span>Yes</p>
             <p><span>Number of Teams: </span>4</p>
             <p><span>Current Position: </span>3th</p>
