--- a/app/views/league.view.html
+++ b/app/views/league.view.html
@@ -43,8 +43,8 @@
   <p>code: {{league_id}}</p>
 <pre>{{league}}</pre>
   -->
-
-  <div class = "col-sm-9" ui-view>
+  <div class = "col-sm-1"></div>
+  <div class = "col-sm-7" ui-view>
 
     <table class="table table-bordered table-striped">
       <thead>
