--- a/app/views/players.view.html
+++ b/app/views/players.view.html
@@ -1,20 +1,9 @@
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="col-lg-2">
-          
-        </div>
-        <div class="col-lg-8">
+      <div class="col-sm-12">
           <div class="row">
             <div class="col-xs-4">
               <label for="search">Search:</label>
               <input ng-model="q" id="search" class="form-control" placeholder="Filter text">
             </div>
-            <div class="col-xs-4">
-              <label for="search">items per page:</label>
-              <input type="number" min="1" max="100" class="form-control" ng-model="pageSize">
-            </div>
-          </div>
 
           <br>
           <tabset >
@@ -66,10 +55,10 @@
                   </tr>
                 </thead>
                 <tbody>
-                <tr  pagination-id="1" dir-paginate="player in filtered = (players | filter:{positionDescription: 'Goalkeeper'} | filter:q | orderBy:sortKey:reverse) | itemsPerPage: pageSize" current-page="currentPage" >
-                      <td>{{ player.positionDescription }}</td>
-                      <td>{{ player.name }}</td>
-                      <td>{{ player.team }}</td>
+                  <tr  pagination-id="1" dir-paginate="player in filtered = (players | filter:{positionDescription: 'Goalkeeper'} | filter:q | orderBy:sortKey:reverse) | itemsPerPage: pageSize" current-page="currentPage" >
+                    <td>{{ player.positionDescription }}</td>
+                    <td>{{ player.name }}</td>
+                    <td>{{ player.team }}</td>
                   </tr>
                 </tbody>    
               </table>
@@ -96,10 +85,10 @@
                   </tr>
                 </thead>
                 <tbody>
-                <tr  pagination-id="2" dir-paginate="player in filtered = (players | filter:{positionDescription: 'Defender'} | filter:q | orderBy:sortKey:reverse) | itemsPerPage: pageSize" current-page="currentPage" >
-                      <td>{{ player.positionDescription }}</td>
-                      <td>{{ player.name }}</td>
-                      <td>{{ player.team }}</td>
+                  <tr  pagination-id="2" dir-paginate="player in filtered = (players | filter:{positionDescription: 'Defender'} | filter:q | orderBy:sortKey:reverse) | itemsPerPage: pageSize" current-page="currentPage" >
+                    <td>{{ player.positionDescription }}</td>
+                    <td>{{ player.name }}</td>
+                    <td>{{ player.team }}</td>
                   </tr>
                 </tbody>    
               </table>
@@ -172,10 +161,7 @@
               </div>
             </tab>
           </tabset>
-  
+
           
         </div>
-      </div>
     </div>
-  </div>
-</div>
