--- a/app/styles/general.scss
+++ b/app/styles/general.scss
@@ -18,7 +18,7 @@ $contrast: #8C5E5A;*/
 @import "mixins&variables";
 
 html {
-  @include full_bg('http://www.img.lx.it.pt/~fp/cav/ano2012_2013/Trabalhos_MEEC_2012_2013/Artigo9/html/images/background/grass.jpg');
+  @include full_bg('http://kclrfanzone.com/wp-content/uploads/2015/09/stock-photo-detail-of-soccer-field-grass-in-a-stadium-102104047.jpg');
   background-attachment: fixed;
 }
 
