--- a/app/views/home.view.html
+++ b/app/views/home.view.html
@@ -1,24 +1,13 @@
 <div class = "container-fluid">
-  <div class = "jumbotron">
+  <div class="col-md-3"></div>
+  <center>
+  <div class = "jumbotron col-md-6">
     <h1>Bitleague</h1>
     <p class = "lead">
       <img width = "350" height = "200" src = "http:\\placehold.it\350x200">
+      <div ng-if="!loggedIn()">
+        <button id="facebookLoginBtn" ng-click="login()">Login with Facebook</button>
+      </div>
     </p>
-  </div>
-
-  <div class = "row marketing">
-
-    <h4>HTML5 Boilerplate</h4>
-    <p>
-      HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-    </p>
-
-    <h4>Angular</h4>
-    <p>
-      AngularJS is a toolset for building the framework most suited to your application development.
-    </p>
-
-    <h4>Karma</h4>
-    <p>Spectacular Test Runner for JavaScript.</p>
   </div>
 </div>
