--- a/app/views/draft.view.html
+++ b/app/views/draft.view.html
@@ -67,7 +67,7 @@
               <div id = "draft-main-table" class = "col-sm-12 no-padding">
                 <tabset>
                   <tab index = "0" heading = "All">
-                    <table class = "table table-bordered table-striped">
+                    <table class = "table table-bordered table-striped my-table">
                       <thead>
                       <tr>
                         <th ng-click = "sortTable('position')">Position
@@ -106,7 +106,7 @@
                     </div>
                   </tab>
                   <tab index = "1" heading = "Goalkeepers">
-                    <table class = "table table-bordered table-striped">
+                    <table class = "table table-bordered table-striped my-table">
 
                       <thead>
                       <tr>
@@ -145,7 +145,7 @@
                     </div>
                   </tab>
                   <tab index = "2" heading = "Defenders">
-                    <table class = "table table-bordered table-striped">
+                    <table class = "table table-bordered table-striped my-table">
                       <thead>
                       <tr>
                         <th ng-click = "sortTable('position')">Position
@@ -183,7 +183,7 @@
                     </div>
                   </tab>
                   <tab index = "3" heading = "Midfielders">
-                    <table class = "table table-bordered table-striped">
+                    <table class = "table table-bordered table-striped my-table">
 
                       <thead>
                       <tr>
@@ -223,7 +223,7 @@
                     </div>
                   </tab>
                   <tab index = "4" heading = "Forwards">
-                    <table class = "table table-bordered table-striped">
+                    <table class = "table table-bordered table-striped my-table">
 
                       <thead>
                       <tr>
