--- a/app/views/team.view.html
+++ b/app/views/team.view.html
@@ -1,3 +1,9 @@
+<div class="col-xs-12 back_to_menu">
+  <a ui-sref = "league.menu({id:league_id})">
+    <i class = "fa fa-arrow-circle-o-left"></i>
+  </a>
+</div>
+
 <div class = "container-fluid">
   <h2>Team's Name</h2>
   <h4>
