--- a/app/styles/league.scss
+++ b/app/styles/league.scss
@@ -1,6 +1,53 @@
 @import "draft";
 
 #league {
+  /* MENU */
+  #league_menu {
+    list-style-type: none;
+
+    li {
+      background-color: rgba(255, 255, 255, 0.7);
+      border: 1.5px solid $contrast;
+      display: inline-block;
+      width: 48%;
+      margin-bottom: 2%;
+
+      &:nth-child(even) {
+        margin-left: 1%;
+      }
+      &:nth-child(odd) {
+        margin-right: 1%;
+      }
+
+      a {
+        background: transparent;
+        color: #000;
+        font-size: 35px;
+        color: rgba(0, 0, 0, 0.6);
+        @include transition();
+
+        &:hover {
+          box-shadow: none;
+          outline: none;
+          color: rgba(0, 0, 0, 1);
+        }
+
+        i {
+          font-size: 3.5em;
+          margin-bottom: 0.2em;
+
+          &:nth-child(2) {
+            font-size: 0.8em;
+          }
+        }
+
+        span {
+        }
+      }
+    }
+  }
+
+  /* Matches */
   .matchday-table {
     tbody {
       tr {
