--- a/app/views/league.view.html
+++ b/app/views/league.view.html
@@ -1,3 +1,3 @@
 <div class = "container" id="league">
-  <div class = "col-sm-9" ui-view></div>
+  <div class = "col-xs-12 no-padding" ui-view></div>
 </div>
