--- a/app/views/userpage.view.html
+++ b/app/views/userpage.view.html
@@ -1,5 +1,5 @@
 <div class = "container" id = "user_page">
-  <div class = "col-xs-12" id = "leagues_title">
+  <div class = "col-xs-12 big_title">
     <h1 class="col-xs-6">My Leagues</h1>
     <div class="col-xs-6 text-right">
       <button type = "button" class = "btn btn-primary league_btn" ui-sref = "new_league"><i class="fa fa-plus"></i> Create a league</button>
